Linked Applications
Loading…
Dashboards
Projects
Issues
Give feedback to Atlassian
Help
Jira Core help
Keyboard Shortcuts
Issue Reminders help
About Jira
Jira Credits
Log In
MariaDB Server
MDEV-15510
storage/oqgraph: Quench warnings with Boost 1.66
Log In
Export
XML
Word
Printable
Details
Type:
Bug
Status:
Closed
(
View Workflow
)
Priority:
Major
Resolution:
Fixed
Affects Version/s:
10.3
Fix Version/s:
10.0.35
Component/s:
Storage Engine - OQGRAPH
Labels:
contribution
foundation
Description
Boost 1.66 already sets BOOST_NO_HASH and BOOST_NO_SLIST
Attachments
Activity
People
Assignee:
Sergey Vojtovich
Reporter:
Sergey Vojtovich
Votes:
0
Vote for this issue
Watchers:
1
Start watching this issue
Dates
Created:
2018-03-08 15:25
Updated:
2018-04-11 10:32
Resolved:
2018-04-11 10:32