MDEV-15510 - storage/oqgraph: Quench warnings with Boost 1.66

Moved Boost configuration definitions before first inclusion of Boost
headers to avoid re-definition.